--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,3 +7,25 @@
     list-style: none;
     display:block;
 }
+
+.profile-img {
+  float: left;
+  margin-right: 15px;
+  width: 30%;
+  min-width: 200px;
+  max-width: 400px;
+}
+
+.video-box{
+  padding-top: 56.25%;
+  background-color: black;
+  position: relative;
+}
+
+.video{
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  top:0;
+  left:0;
+}
