--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -55,15 +55,6 @@
   left:0;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 768px) {
-  .column {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 992px) {
-
-}
 
 
 * {
@@ -74,7 +65,8 @@
 .container {
   position: relative;
   display: block;
-  width:80%;
+  width:100%;
+  max-width: 700px;
 }
 
 /* Hide the images by default */
@@ -118,11 +110,14 @@
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #000;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
-  top: 0;
+  top: 10px;
+  left: 15px;
+  background: white;
+  opacity: 0.8;
 }
 
 /* Container for image text */
@@ -153,4 +148,19 @@
 .active,
 .demo:hover {
   opacity: 1;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 768px) {
+  .column {
+    width: 100%;
+  }
+
+  .profile-img {
+    width: 50%;
+  }
+
+}
+@media screen and (max-width: 992px) {
+
 }
