Added Engineering Society content and creater new flex-column layout.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -5,6 +5,18 @@
   padding: 5px;
 }
 
+.column_quarter {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+.column_quarter_flex {
+  float: left;
+  width: 75%;
+  padding: 5px;
+}
+
 .col-img {
   width:100%;
 }
@@ -162,8 +174,20 @@
     width: 100%;
   }
 
+  .column_quarter{
+    width: 50%;
+  }
+
+  .column_quarter_flex{
+    width:50%;
+  }
+
   .profile-img {
     width: 50%;
+  }
+
+  .banner-img {
+      width: 90%;
   }
 
 }
