--- a/css/image_grid.css
+++ b/css/image_grid.css
@@ -4,7 +4,7 @@
     padding:0;
     font-size:0; /* Remember to change it back to normal font size if have captions */
     list-style:none;
-    background-color:#000;
+    background-color:#fff;
 }
 #rig li {
     display: inline-block;
